# method-invoke

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cvk.hpp  cvk_config.hpp
details/: iocontextgetter.hpp  methodinvoker.hpp  receiver.hpp
example/: CMakeLists.txt
example/include/: context1.hpp  context2.hpp  context3.hpp  coroutine_traits.hpp  example_config.hpp  syncwork.hpp
example/src/: context1.cpp  context2.cpp  context3.cpp  example.cpp
hpp/: contextsstore.h  defines.h  expected  future.h  iocontextgetter.h  methodinvoker.h  receiver.h
tests/future/: CMakeLists.txt  stdfuturebehavior.cpp
tests/testing/: cvktest.hpp  somesharedcode.h
tpp/: contextsstore.tpp  methodinvoker.tpp  receiver.tpp
